reorganize the project
- Use TypeScript references to make TypeScript compilation faster:
  - Added a script to generate TypeScript references from yarn's
    workspaces under `scripts/`.
  - Run `yarn tsbuild` to only build changed TypeScript files.
- Rewrite yarn scripts accordingly:
  - The `prepare` scripts now doesn't build TypeScript packages.
  - `yarn clean` has to be called manually if you still need it.
- Move packages around:
  - Example applications are now under `examples/`.
  - Theia extensions are under `theia-extensions/`.
- Removed the `assets` script from `@trace-viewer/react-components`:
  - Placed the styles under `style` and added it to `files` in the
    `package.json` file.

You can now do `yarn tsbuild` from the root to only compile what changed
and dependent files.

You can also use `yarn tswatch` to watch all TypeScript files and
rebuild when needed. It only works for TypeScript files, you still need
to rerun `theia build` to regenerate and build the example applications.

The advantage of `tswatch` is that it will catch workspace-wide errors
as soon as you introduce a problem into files.

Signed-off-by: Paul Maréchal <paul.marechal@ericsson.com>

--- a/base/package.json
+++ b/base/package.json
@@ -25,10 +25,9 @@
     "typescript": "latest"
   },
   "scripts": {
-    "build": "tsc",
-    "clean": "rimraf lib",
+    "build": "tsc -b",
+    "clean": "rimraf lib *.tsbuildinfo",
     "lint": "eslint .",
-    "prepare": "yarn clean && yarn build",
     "test": "echo 'test'",
     "watch": "tsc -w"
   }
