--- a/react-components/tsconfig.json
+++ b/react-components/tsconfig.json
@@ -1,13 +1,14 @@
 {
     "compilerOptions": {
+        "composite": true,
         "strict": true,
         "sourceMap": true,
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "module": "commonjs",
         "target": "ES2020",
-        "rootDir": "./src",
-        "outDir": "./lib",
+        "rootDir": "src",
+        "outDir": "lib",
         "jsx": "react",
         "declaration": true,
         "declarationMap": true,
@@ -21,5 +22,10 @@
         "**/__tests__",
         "**/*.spec.ts",
         "**/*.test.ts"
+    ],
+    "references": [
+        {
+            "path": "../base"
+        }
     ]
 }
