--- a/react-components/tsconfig.json
+++ b/react-components/tsconfig.json
@@ -6,7 +6,8 @@
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "module": "commonjs",
-        "target": "ES2020",
+        "target": "ES5",
+        "downlevelIteration": true,
         "rootDir": "src",
         "outDir": "lib",
         "jsx": "react",
