--- a/react-components/package.json
+++ b/react-components/package.json
@@ -24,6 +24,7 @@
     "react-chartjs-2": "^2.7.6",
     "react-grid-layout": "^1.1.0",
     "react-modal": "^3.8.1",
+    "react-tooltip": "4.2.14",
     "react-virtualized": "^9.21.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.86.0",
