--- a/react-components/tsconfig.json
+++ b/react-components/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "experimentalDecorators": true,
         "composite": true,
         "strict": true,
         "sourceMap": true,
