--- a/base/tsconfig.json
+++ b/base/tsconfig.json
@@ -11,7 +11,8 @@
         "rootDir": "src",
         "outDir": "lib",
         "declaration": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "jsx": "react"
     },
     "include": [
         "src"
