Support publishing packages and theia-trace-extension to NPM
- Use lerna 4.0.0
- Add publishing scripts in package.json
- Update related information in relevant package.json files
- Add github action to publish next version using --canary lerna option

The publish commands will publish the following packages to NPM:

    traceviewer-base
    traceviewer-react-components
    theia-traceviewer

Fixes #429

Signed-off-by: Bernd Hufmann <Bernd.Hufmann@ericsson.com>

--- a/base/package.json
+++ b/base/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "@trace-viewer/base",
-  "version": "0.0.0",
-  "description": "Trace Compass base package, contains trace management utilities",
+  "name": "traceviewer-base",
+  "version": "0.0.1",
+  "description": "Trace Viewer base package, contains trace management utilities",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/theia-ide/theia-trace-extension"
   },
+  "bugs": {
+    "url": "https://github.com/theia-ide/theia-trace-extension/issues"
+  },
+  "homepage": "https://github.com/theia-ide/theia-trace-extension",
   "files": [
     "lib",
     "src"
@@ -30,5 +34,6 @@
     "lint": "eslint .",
     "test": "echo 'test'",
     "watch": "tsc -w"
-  }
+  },
+  "gitHead": "4f93878b0ef9d58254a1f41daf99d03b4608df13"
 }
