--- a/react-components/package.json
+++ b/react-components/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@trace-viewer/react-components",
-  "version": "0.0.0",
+  "name": "traceviewer-react-components",
+  "version": "0.0.1",
   "description": "Trace Compass react components",
   "license": "MIT",
   "repository": {
@@ -16,7 +16,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@trace-viewer/base": "0.0.0",
+    "traceviewer-base": "0.0.1",
     "ag-grid-community": "^23.1.0",
     "ag-grid-react": "^23.1.0",
     "chart.js": "^2.8.0",
