Build using release version of timeline-chart and tsp-typescript-client
Signed-off-by: Bernd Hufmann <Bernd.Hufmann@ericsson.com>

--- a/base/package.json
+++ b/base/package.json
@@ -16,7 +16,7 @@
     "src"
   ],
   "dependencies": {
-    "tsp-typescript-client": "next"
+    "tsp-typescript-client": "^0.3.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.4.0",
