Temporary fix for react-grid-layout issues fixes #495
Signed-off-by: Ankush Tyagi <ankush.tyagi@ericsson.com>

--- a/react-components/package.json
+++ b/react-components/package.json
@@ -22,7 +22,7 @@
     "chart.js": "^2.8.0",
     "lodash": "^4.17.15",
     "react-chartjs-2": "^2.7.6",
-    "react-grid-layout": "^1.1.0",
+    "react-grid-layout": "1.2.0",
     "react-modal": "^3.8.1",
     "react-tooltip": "4.2.14",
     "react-virtualized": "^9.21.0",
