--- a/react-components/package.json
+++ b/react-components/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-no-null": "^1.0.2",
     "eslint-plugin-react": "^7.20.0",
     "jest": "^26.1.0",
+    "jest-canvas-mock": "^2.3.1",
     "react-test-renderer": "^16.13.1",
     "rimraf": "latest",
     "ts-jest": "^26.3.0",
