--- a/base/package.json
+++ b/base/package.json
@@ -16,7 +16,7 @@
     "src"
   ],
   "dependencies": {
-    "tsp-typescript-client": "^0.3.0"
+    "tsp-typescript-client": "next"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.4.0",
