--- a/react-components/package.json
+++ b/react-components/package.json
@@ -16,10 +16,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "traceviewer-base": "0.1.0",
     "ag-grid-community": "^23.1.0",
     "ag-grid-react": "^23.1.0",
     "chart.js": "^2.8.0",
+    "d3": "^7.1.1",
     "lodash": "^4.17.15",
     "react-chartjs-2": "^2.7.6",
     "react-grid-layout": "1.2.0",
@@ -29,11 +29,13 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.86.0",
     "timeline-chart": "next",
+    "traceviewer-base": "0.1.0",
     "tsp-typescript-client": "next"
   },
   "devDependencies": {
     "@testing-library/react": "^10.4.6",
     "@types/chart.js": "^2.7.52",
+    "@types/d3": "^7.1.0",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.4",
