--- a/base/package.json
+++ b/base/package.json
@@ -16,8 +16,7 @@
     "src"
   ],
   "dependencies": {
-    "tsp-typescript-client": "next",
-    "json-bigint": "sidorares/json-bigint#2c0a5f896d7888e68e5f4ae3c7ea5cd42fd54473"
+    "tsp-typescript-client": "next"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.4.0",
