--- a/react-components/jest.config.json
+++ b/react-components/jest.config.json
@@ -17,6 +17,9 @@
         "json",
         "node"
     ],
+    "setupFiles": [
+        "./jest-shim.ts"
+    ],
     "setupFilesAfterEnv": [
         "jest-canvas-mock",
         "./jestSetup.ts"
