--- a/react-components/package.json
+++ b/react-components/package.json
@@ -34,12 +34,12 @@
     "tsp-typescript-client": "next"
   },
   "devDependencies": {
-    "@testing-library/react": "^10.4.6",
+    "@testing-library/react": "^13.4.0",
     "@types/chart.js": "^2.7.52",
     "@types/d3": "^7.1.0",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest": "^26.0.4",
+    "@types/jest": "^29.0.0",
     "@types/lodash": "^4.14.142",
     "@types/react-grid-layout": "^1.1.1",
     "@types/react-modal": "^3.8.2",
@@ -48,16 +48,17 @@
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.3.0",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-no-null": "^1.0.2",
     "eslint-plugin-react": "^7.20.0",
-    "jest": "^26.1.0",
-    "jest-canvas-mock": "^2.3.1",
-    "react-test-renderer": "^16.13.1",
+    "jest": "^28.1.3",
+    "jest-canvas-mock": "^2.4.0",
+    "jest-environment-jsdom": "^28.1.3",
+    "react-test-renderer": "^18.2.0",
     "rimraf": "latest",
-    "ts-jest": "^26.3.0",
+    "ts-jest": "^28.0.8",
     "typescript": "latest"
   },
   "scripts": {
