Remove dependencies to enzyme and enzyme-adapter-react-16
Since Enzyme doesn't (and won't) support React 18, react-testing-library
is used for testing. This commit removes unnecessary dependencies.

Signed-off-by: Bernd Hufmann <bernd.hufmann@ericsson.com>

--- a/react-components/jest.config.json
+++ b/react-components/jest.config.json
@@ -21,7 +21,6 @@
         "./jest-shim.ts"
     ],
     "setupFilesAfterEnv": [
-        "jest-canvas-mock",
-        "./jestSetup.ts"
+        "jest-canvas-mock"
     ]
 }
