Set up Prettier to enforce code style
This commit adds Prettier to enforce code style for the trace
extension.

Contributors can run yarn format to automatically run Prettier
to format the source code of the  three packages traceviewer-base,
traceviewer-react-components, and theia-traceviewer. Alternatively,
they can run Prettier on a single file using the command
yarn prettier --write <file-name>.

This commit also configures CI to run yarn prettier --check to ensure
that any new code follows the pre-defined code style rules.

Replaces #968 and resolves #861.

Signed-off-by: Hoang Thuan Pham <hoang.pham@calian.ca>

--- a/base/package.json
+++ b/base/package.json
@@ -33,7 +33,9 @@
     "clean": "rimraf lib *.tsbuildinfo",
     "lint": "eslint .",
     "test": "echo 'test'",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "format:write": "prettier --write ./src",
+    "format:check": "prettier --check ./src"
   },
   "gitHead": "4f93878b0ef9d58254a1f41daf99d03b4608df13"
 }
