--- a/react-components/package.json
+++ b/react-components/package.json
@@ -13,7 +13,7 @@
     "style"
   ],
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17 <1.3.0",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@vscode/codicons": "^0.0.29",
