Add 'yarn lint:fix' Script
Adds a package.json script to automatically fix linting errors in the 3 packages.

Signed-off-by: Will Yang <william.yang@ericsson.com>

--- a/base/package.json
+++ b/base/package.json
@@ -32,6 +32,7 @@
     "build": "tsc -b",
     "clean": "rimraf lib *.tsbuildinfo",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "test": "echo 'test'",
     "watch": "tsc -w",
     "format:write": "prettier --write ./src",
