--- a/react-components/package.json
+++ b/react-components/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17 <1.3.0",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@mui/material": "^5.10.14",
     "@vscode/codicons": "^0.0.29",
     "ag-grid-community": "^28.2.0",
     "ag-grid-react": "^28.2.0",
