--- a/react-components/package.json
+++ b/react-components/package.json
@@ -35,9 +35,9 @@
         "react-virtualized": "^9.21.0",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^0.86.0",
-        "timeline-chart": "next",
+        "timeline-chart": "^0.3.1",
         "traceviewer-base": "0.2.0",
-        "tsp-typescript-client": "next"
+        "tsp-typescript-client": "^0.4.1"
     },
     "devDependencies": {
         "@testing-library/react": "^13.4.0",
