--- a/base/package.json
+++ b/base/package.json
@@ -25,8 +25,8 @@
         "eslint-plugin-import": "^2.21.2",
         "eslint-plugin-no-null": "^1.0.2",
         "eslint-plugin-react": "^7.20.0",
-        "rimraf": "latest",
-        "typescript": "latest"
+        "rimraf": "^5.0.0",
+        "typescript": "4.9.5"
     },
     "scripts": {
         "build": "tsc -b",
