--- a/react-components/package.json
+++ b/react-components/package.json
@@ -19,7 +19,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.17 <1.3.0",
         "@fortawesome/free-solid-svg-icons": "^5.8.1",
-        "@fortawesome/react-fontawesome": "^0.1.4",
+        "@fortawesome/react-fontawesome": "^0.2.2",
         "@mui/material": "^5.10.14",
         "@vscode/codicons": "^0.0.29",
         "@ag-grid-community/core": "^32.0.1",
@@ -42,10 +42,10 @@
         "tsp-typescript-client": "^0.4.2"
     },
     "devDependencies": {
-        "@testing-library/react": "^13.4.0",
+        "@testing-library/react": "^15.0.6",
         "@types/chart.js": "^2.7.52",
         "@types/d3": "^7.1.0",
-        "@types/jest": "^29.0.0",
+        "@types/jest": "^28.0.0",
         "@types/lodash": "^4.14.142",
         "@types/react-grid-layout": "^1.1.1",
         "@types/react-modal": "^3.8.2",
@@ -61,9 +61,9 @@
         "jest-canvas-mock": "^2.4.0",
         "jest-environment-jsdom": "^28.1.3",
         "react-test-renderer": "^18.2.0",
-        "rimraf": "latest",
+        "rimraf": "^5.0.0",
         "ts-jest": "^28.0.8",
-        "typescript": "latest"
+        "typescript": "4.9.5"
     },
     "scripts": {
         "build": "tsc -b",
